--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 # 스크립트를 실행할 수 있는 환경 구성
 before_install:
   - echo "start Creating an image with dockerfile"
+  - cd docker-react-app
   - docker build -t jonghwa/docker-react-app -f Dockerfile.dev
 
 script:
