--- a/docker-fullstack-app/nginx/default.conf
+++ b/docker-fullstack-app/nginx/default.conf
@@ -22,6 +22,6 @@ server {
         proxy_pass http://frontend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http-upgrade;
-        prioxy_set_header Connection "Upgrade";
+        proxy_set_header Connection "Upgrade";
     }
 }
