--- a/docker-fullstack-app/nginx/default.conf
+++ b/docker-fullstack-app/nginx/default.conf
@@ -3,7 +3,7 @@ upstream frontend {
 }
 
 upstream backend {
-    server frontend:5000;
+    server backend:5000;
 }
 
 
@@ -21,7 +21,7 @@ server {
     location /sockjs-node {
         proxy_pass http://frontend;
         proxy_http_version 1.1;
-        proxy_set_header Upgrade $http-upgrade;
+        proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
     }
 }
